--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://qiaobingchen.github.io/
 date_format: "ordinal"
 title: 丙子先生
-subtitle: ""
+subtitle: "生活不止眼前的代码"
 description: "乔丙辰的个人博客"
 keywords: 丙子先生, Bingchen Qiao, bclogin, bingchen
 timezone: Asia/Shanghai
